# WinPipe

./: .gitignore  CMakeLists.txt  README.md  build-x64.cmd  build-x86.cmd  build.cmd  prepare-build.cmd
examples/: test.sln
examples/PipeClient/: PipeClient.cpp  PipeClient.vcxproj  pch.h
examples/PipeServer/: PipeServer.cpp  PipeServer.vcxproj
examples/test-no-protobuf/: test-no-protobuf.sln
examples/test-no-protobuf/PipeClient/: PipeClient.cpp  PipeClient.vcxproj
examples/test-no-protobuf/PipeServer/: PipeServer.cpp  PipeServer.vcxproj  PipeServer.vcxproj.filters  pch.h
examples/test-with-protobuf/: CefPipeCmd.h  test-with-protobuf.sln
examples/test-with-protobuf/PipeClient/: PipeClient.cpp  PipeClient.vcxproj  PipeClient.vcxproj.filters
examples/test-with-protobuf/PipeServer/: PipeServer.cpp  PipeServer.vcxproj  pch.h
src/: LogTrace.h  PipeWrapper.cpp  PipeWrapper.h  option.h  pipeCmd.pb.h  pipeCmd.proto
tools/cmake_options/: debug_level_option.txt  multithreaded_compiler_option.txt
